--- a/cfg/global.yaml
+++ b/cfg/global.yaml
@@ -30,7 +30,9 @@ filesystem:
         - /etc/ld.so.cache
         - /etc/host.conf
         - /etc/gai.conf
+        - /etc/os-release
         - /proc
+        - /sys
         - '{XDG_CONFIG_HOME}/anvillm'
         - '{HOME}/env'
     rox:
