Add agent system configuration and AGENT_ID support
- Add HOME/prj and HOME/src filesystem mounts to global config
- Add AGENT_ID environment variable support
- Add agent skills and mcpt configuration paths
- Add JENKINS_MCP_AUTH environment variable
- Implement AGENT_ID setup in tmux backend sessions

--- a/cfg/global.yaml
+++ b/cfg/global.yaml
@@ -35,6 +35,8 @@ filesystem:
         - /sys
         - '{XDG_CONFIG_HOME}/anvillm'
         - '{HOME}/env'
+        - '{HOME}/prj'
+        - '{HOME}/src'
     rox:
         - /usr
         - /lib
@@ -65,6 +67,7 @@ env:
     - NAMESPACE
     - DISPLAY
     - WAYLAND_DISPLAY
+    - AGENT_ID
 advanced:
     ldd: false
     add_exec: true
